--- a/media.css
+++ b/media.css
@@ -25,8 +25,12 @@
     .home-image-box{
         display: none;
     }
+}
 
 
 
-    
+@media(min-width:768px){
+    .dropdown{
+        display: none;
+    }
 }
